Run Axiom CI with Core-managed Docker and Java 25
Select Core-provisioned Docker workers and Java 25 for hosted Axiom checks. Keep non-Linux portability observations scheduled and manual for the Linux x64 MVP.